Fixed weird gap

--- a/files/css/stylesheet.css
+++ b/files/css/stylesheet.css
@@ -1,6 +1,6 @@
 div#body {
   position:absolute;
-  top:300px;
+  top:182px;
   left:0px;
   right:0px;
   bottom:0px;
